--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
   --background-card-color: rgba(33, 150, 243, 0.9);
   --time-animation: 250ms;
   --time-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --subscription-input-color: rgba(255, 255, 255, 0.3);
 }
 
 body {
@@ -457,7 +458,8 @@ footer {
 .contacts {
   margin-right: 70px;
 }
-.invitation h2 {
+.invitation h2,
+.subscription h2  {
   margin-bottom: 20px;
 
   font-weight: 700;
@@ -479,6 +481,30 @@ footer {
 .invitation-icon .social-icon-list {
   fill: var(--additional-text-color);
 }
+.subscription {
+  margin-left: 73px;
+}
+.subscription-button {
+  width: 200px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+/* box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15)); */
+
+.subscription-input {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  padding: 15px 16px;
+  border: 1px solid var(--subscription-input-color);
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  background-color: inherit;
+  color: var(--adress-text-color);
+
+}
+
 
 /* Стили Портфолио */
 .section.examples {
@@ -579,8 +605,6 @@ footer {
 .portfolio-list-description p{
   margin: 0;
 }
-
-
 .border-box {
   display: block;
   padding: 20px 24px;
@@ -614,7 +638,7 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  
+ 
   background: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
@@ -637,12 +661,13 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  display: flex;
-  justify-content: right;
+  /* display: flex;
+  flex-direction: column;
+  align-items: flex-end; */
 
   width: 528px;
   height: 581px;
-
+    
   background-color: var(--additional-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -650,6 +675,9 @@ footer {
 }
 
 .button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -657,8 +685,6 @@ footer {
   height: 30px;
   padding: 0;
   border: 0;
-  margin-top: 8px;
-  margin-right: 8px;
 
   cursor: pointer;
 
@@ -667,6 +693,57 @@ footer {
   background-color: var(--main-background-color);
 
 }
+.button-close:hover .icon-close,
+.button-close:focus .icon-close {
+  fill: var(--accent-text-color);
+}
 .icon-close {
   fill: var(--header-logo-color);
+}
+.form-modal {
+  margin: 40px;
+}
+.form-modal h2 {
+  margin: 0 0 12px 0;
+  font-size: 20px;
+  color: var(--main-title-text-color);
+
+}
+.label {
+  display: block;
+
+
+}
+.input-date {
+display: block;
+width: 100%;
+margin-bottom: 10px;
+margin-top: 4px;
+height: 40px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+
+font-size: 12px;
+line-height: 1.17;
+color: var(--main-text-color);
+}
+.label textarea {
+  height: 120px;
+  resize: none;
+  color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+}
+.contract {
+  color: var(--accent-text-color);
+  text-decoration: underline;
+}
+.order.form-button{
+  display: block;
+  width: 200px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 30px;
 }
