--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,13 @@ footer {
   margin-left: 73px;
 }
 .subscription-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
   width: 200px;
+  padding-left: 0;
+  padding-right: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 /* box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15)); */
@@ -503,6 +509,10 @@ footer {
   background-color: inherit;
   color: var(--adress-text-color);
 
+}
+.icon-send {
+  margin-left: 10px;
+  fill: var(--additional-text-color);
 }
 
 
@@ -661,19 +671,14 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  /* display: flex;
-  flex-direction: column;
-  align-items: flex-end; */
-
   width: 528px;
   height: 581px;
-    
-  background-color: var(--additional-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  background-color: var(--additional-text-color);
+  font-size: 12px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform var(--time-animation) var(--time-function);
 }
-
 .button-close {
   position: absolute;
   top: 8px;
@@ -709,24 +714,41 @@ footer {
   color: var(--main-title-text-color);
 
 }
+.form-box {
+  position: relative;
+}
+.svg-modal {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+  fill: var(--header-logo-colo);
+}
 .label {
   display: block;
-
-
 }
 .input-date {
 display: block;
 width: 100%;
 margin-bottom: 10px;
 margin-top: 4px;
+padding-left: 42px;
+padding-right: 15px;
 height: 40px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
+outline: none;
 
 font-size: 12px;
 line-height: 1.17;
 color: var(--main-text-color);
 }
+.input-date:focus {
+  border-color: var(--accent-text-color);
+}
+.input-date:focus + .svg-modal{
+  fill: var(--accent-text-color);
+}
+
 .label textarea {
   height: 120px;
   resize: none;
@@ -734,6 +756,50 @@ color: var(--main-text-color);
   letter-spacing: 0.01em;
   padding: 12px 16px;
   margin-bottom: 20px;
+}
+.approval-box {
+   /* Удаляем элемент из потока документа */
+   position: absolute;
+   /* Временное решение для неверно произносимого, размазанного текста */
+   white-space: nowrap;
+   /* Устанавливаем минимально возможный размер (некоторые скринридеры игнорируют элементы с нулевой высотой и шириной) */
+   width: 1px;
+   height: 1px;
+   /* Скрываем вылезающий за границы контент */
+   overflow: hidden;
+   /* Сбрасываем любые свойства, которые могут повлиять на размер элемента */
+   border: 0;
+   padding: 0;
+   /* Вырезаем ту часть контента, которая должна отображаться. */
+   /* Устаревшее свойство clip для старых браузеров */
+   clip: rect(0 0 0 0);
+   /* clip-path для новых браузеров. inset(50%) определяет область вставки, которая позволит контенту исчезнуть.  */
+   clip-path: inset(50%);
+   /* Похоже, никто до конца не понимает, почему тут margin: -1px. Кроме того, это приводит к проблемам (читай: https://github.com/h5bp/html5-boilerplate/issues/1985). */
+   margin: -1px;
+}
+
+.custum-checkbox {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--header-logo-color);
+  border-radius: 4px;
+  margin-right: 8px;
+}
+.approval-box:checked + .custum-checkbox {
+  background-image: url(../images/check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--accent-text-color);
+  background-color: var(--accent-text-color);
+}
+.approval-box:checked {
+  color: green;
+}
+.form-checkbox {
+  display: inline-flex;
+  align-items: center;
 }
 .contract {
   color: var(--accent-text-color);
